@@ -1,3 +1,8 @@
+2009-02-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Don't react on some keybindings in case of no document is open.
+
+
 2009-02-18  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Formating of selected text
